fix: changed modal container overflow-y

--- a/src/components/JobOfferModal/JobOfferModal.module.scss
+++ b/src/components/JobOfferModal/JobOfferModal.module.scss
@@ -4,6 +4,7 @@
    position: fixed;
    width: 57%;
    max-height: 85%;
+   overflow-y: auto;
    background: var(--white, #fff);
    z-index: 999;
    top: 50%;
